--- a/the-plaid.cabal
+++ b/the-plaid.cabal
@@ -35,10 +35,10 @@ library
       lib
   ghc-options: -Wall -funbox-strict-fields
   build-depends:
-      aeson >=1.0 && <2.0
+      aeson >=2.0
     , base >=4.7 && <5.0
     , base64-bytestring >1.0 && <2.0
-    , bytestring >=0.10.0 && <0.11
+    , bytestring >=0.11.0
     , case-insensitive
     , containers >=0.5.0.0 && <0.8
     , deepseq >= 1.4 && <1.6
@@ -93,7 +93,7 @@ test-suite tests
     , QuickCheck
     , aeson
     , base >=4.7 && <5.0
-    , bytestring >=0.10.0 && <0.11
+    , bytestring >=0.11.0
     , containers
     , hspec >=1.8
     , iso8601-time
